# fts-linux-server

./: .gitignore  README.md  pyproject.toml
scripts/autossh/: autossh.py
scripts/backup/: backup.py  exclude.list  restore.py  scheduler.py
scripts/chisel/: chisel-client.sh  chisel-server.sh
scripts/common/: send_email.py
scripts/mydns/: autoupdate.py  scheduler.py
scripts/ngrok/: launch_ngrok.py  observer.py
services/: chiselclient.service  chiselserver.service  mybackup.service  mydns.service  ngrok.service
